update pageNotFound pageWelcome, add customer function, custom button login

--- a/cs157a_server/.env
+++ b/cs157a_server/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=123456789
-DB_DATABASE=cs157a
+DB_HOST=sql9.freemysqlhosting.net
+DB_USER=sql9579638
+DB_PASS=4BQyuZZ45Z
+DB_DATABASE=sql9579638
 PORT=3001
 NODE_ENV=Dev
