--- a/cs157a_server/package.json
+++ b/cs157a_server/package.json
@@ -21,5 +21,8 @@
   },
   "keywords": [],
   "description": "",
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "sass": "^1.56.1"
+  }
 }
